# icode-mda

./: AutomatedFishDensityEstimation.md  AutomatedSAROilDetection.md  AutomatedSARShipDetection.md  AutomatedShorelineRateofChangeDetection.md  AutomatedTrackCorrelation.md  BuildingLibpqxx.md  CMakeLists.txt  ContextualBehaviouralModellingAndClassificationOfVesselsInAMaritimePirateSituation.md  DeployOmarOnJBoss.md  DeployingOmarWar.md  GettingStarted.md  GettingStartedOMAR.md  Home.md  HowTos.md  ICODEMDADevelopmentMappingTool.md  InstallOmarOnWindows2008.md  InstallOmarOnWindows64.md  InstallOmarOnWindowsNotes.md  IntroductionToOSSIM.md  JobsList.md  LessonAIS.md  LessonBuildOSSIM.md  LessonCannyHough.md  LessonDataAccess.md  LessonESA.md  LessonGeoRef.md  LessonGoogleMaps.md  LessonImageLinker.md  LessonKMLshp.md  LessonKernelProcessing.md  LessonKmeans.md  LessonNDVI.md  LessonOSSIMfilter.md  LessonOpenCV.md  LessonOverview.md  LessonSatAisVmsLrit.md  MDStrempel_Low_threshold_radar_tracking.pptx  OMAR_ADD_WMS_LAYER.md  OMAR_CreateSamplePlugin.md  OMAR_Creating_geodata_sample_plugin.md  (+14 more)
DB_common/: ICODE_DBD.py  ICODE_RP.py
ICODEMDAMaps-alerts/: phpsql_dbinfo.php  query_port_calls.php  setup-alerts.html
PostgreSQLMaps/: query_current_vessels.php
WebsiteScraper/: main.py
googleMapsIcode/: Install_Instructions_WIN-WAMP.txt  index.html
shorelineChangeEstimation/: CMakeLists.txt  build_cmake_project_vs10.bat
trunk/VMSParser/src/: CMakeLists.txt  CSVWriter.h  InputSource.h  KMLPlacemarkWriter.h  VMSMessageParser.h  VMSParser.cpp  Writer.h
wiki/: AnomalyDetectionwithMarkovRandomFieldsinSurveillanceApplications.wiki  AutomatedFishDensityEstimation.wiki  AutomatedSAROilDetection.wiki  AutomatedSARShipDetection.wiki  AutomatedShorelineRateofChangeDetection.wiki  AutomatedTrackCorrelation.wiki  BuildingLibpqxx.wiki  ContextualBehaviouralModellingAndClassificationOfVesselsInAMaritimePirateSituation.wiki  ContextualBehaviouralModellingandClassificationOfVesselsInAMaritimePirateSituation.wiki  DeployOmarOnJBoss.wiki  DeployingOmarWar.wiki  GettingStarted.wiki  GettingStartedOMAR.wiki  Home.wiki  HowTos.wiki  ICODEMDADevelopmentMappingTool.wiki  ICODEWikiHome.wiki  InstallOmarOnWindows2008.wiki  InstallOmarOnWindows64.wiki  InstallOmarOnWindowsNotes.wiki  IntroductionToOSSIM.wiki  JobsList.wiki  LessonAIS.wiki  LessonBuildOSSIM.wiki  (+28 more)
(+406 files in other folders)
