cmake_minimum_required(VERSION 2.8)
project( shapefileToImage )

FILE(GLOB SOURCE_FILES *.cpp)
set(LIBRARIES ${OSSIM_LIBRARIES} ${THIRD_PARTY_LIBRARIES} )
set(INCLUDES ${OSSIM_INCLUDE_DIR} ${THIRD_PARTY_INCLUDE_DIR} )
add_executable( shapefileToImage ${SOURCE_FILES} )
include_directories( shapefileToImage ${INCLUDES})
target_link_libraries( shapefileToImage ${LIBRARIES} )

message("====Project: shapefileToImage====")
message("====USING THE FOLLOWING LOCATIONS====") 
message("SOURCE FILES:			${SOURCE_FILES}")
message("THIRD_PARTY_INCLUDE_DIR:	${THIRD_PARTY_INCLUDE_DIR}")
message("THIRD_PARTY_LIBRARIES:		${THIRD_PARTY_LIBRARIES}")
message("OSSIM_INCLUDE_DIR:		${OSSIM_INCLUDE_DIR}")
message("OSSIM_LIBRARIES:		${OSSIM_LIBRARIES}")